k8s-manifests/user-consumer-deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: user-consumer
spec:
  replicas: 1
  selector:
    matchLabels:
      app: user-consumer
  template:
    metadata:
      labels:
        app: user-consumer
    spec:
      containers:
        - name: user-consumer
          image: lesiebarbie/user-consumer:latest
          ports:
            - containerPort: 8080
