k8s-manifests/user-consumer-service.yaml
apiVersion: v1
kind: Service
metadata:
  name: user-consumer-service
spec:
  selector:
    app: user-consumer
  ports:
    - protocol: TCP
      port: 8080
      targetPort: 8080
