k8s-manifests/user-producer-service.yaml
apiVersion: v1
kind: Service
metadata:
  name: user-producer-service
spec:
  selector:
    app: user-producer
  ports:
    - protocol: TCP
      port: 8080
      targetPort: 8080
