k8s-manifests/ingress.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: ingress
spec:
  ingressClassName: nginx
  rules:
    - http:
        paths:
          - path: /producer
            pathType: Prefix
            backend:
              service:
                name: user-producer-service
                port:
                  number: 8080
          - path: /consumer
            pathType: Prefix
            backend:
              service:
                name: user-consumer-service
                port:
                  number: 8080
